[release 0.0.2] Finalize sdkman setup and choose better names for build executor caching steps.