@@ -33,11 +33,12 @@ public interface HashFunction {
 
     static Map<Path, byte[]> read(Path file) throws IOException {
         Map<Path, byte[]> checksums = new LinkedHashMap<>();
-        try (BufferedReader reader = Files.newBufferedReader(file)) {
-            Iterator<String> it = reader.lines().iterator();
-            while (it.hasNext()) {
-                checksums.put(Paths.get(it.next()), HexFormat.of().parseHex(it.next()));
-            }
+        Properties properties = new SequencedProperties();
+        try (Reader reader = Files.newBufferedReader(file)) {
+            properties.load(reader);
+        }
+        for (String name : properties.stringPropertyNames()) {
+            checksums.put(Path.of(name), HexFormat.of().parseHex(properties.getProperty(name)));
         }
         return checksums;
     }
@@ -59,13 +60,14 @@ public interface HashFunction {
     }
 
     static void write(Path file, Map<Path, byte[]> checksums) throws IOException {
-        try (BufferedWriter writer = Files.newBufferedWriter(file)) {
-            for (Map.Entry<Path, byte[]> entry : checksums.entrySet()) {
-                writer.append(entry.getKey().toString());
-                writer.newLine();
-                writer.append(HexFormat.of().formatHex(entry.getValue()));
-                writer.newLine();
-            }
+        Properties properties = new SequencedProperties();
+        for (Map.Entry<Path, byte[]> entry : checksums.entrySet()) {
+            properties.setProperty(
+                    entry.getKey().toString().replace(File.separatorChar, '/'),
+                    HexFormat.of().formatHex(entry.getValue()));
+        }
+        try (Writer writer = Files.newBufferedWriter(file)) {
+            properties.store(writer, null);
         }
     }
 
